Fixing the spacing on the button.

--- a/src/app/styl/views/player.styl
+++ b/src/app/styl/views/player.styl
@@ -114,7 +114,6 @@
         color $SettingsButtonText
         font-family $ButtonFont, $AlternateFont
         font-size 13px
-        line-height 33px
         cursor pointer
         transition background-color .5s
         &:hover {
